i should say yes

--- a/mashpodder/Dockerfile
+++ b/mashpodder/Dockerfile
@@ -1,6 +1,6 @@
 FROM centos:6
 MAINTAINER Bryan Pearson <bwp.pearson@gmail.com>
 
-RUN yum install git-core wget
+RUN yum -y install git-core wget
 
 RUN git clone git@github.com:chessgriffin/mashpodder.git
