--- a/mashpodder/Dockerfile
+++ b/mashpodder/Dockerfile
@@ -3,4 +3,7 @@ Maintainer Bryan Pearson <bwp.pearson@gmail.com>
 
 RUN yum -y install git-core wget
 
-RUN git clone git@github.com:chessgriffin/mashpodder.git
+#RUN git clone git@github.com:chessgriffin/mashpodder.git
+RUN git clone https://github.com/chessgriffin/mashpodder.git
+#ADD mp.conf 
+ 
