--- a/oauth2_proxy/Dockerfile
+++ b/oauth2_proxy/Dockerfile
@@ -3,7 +3,7 @@ Maintainer Bryan Pearson <bwp.pearson@gmail.com>
 
 ENV VERSION 2.0.1
 
-ADD https://github.com/bitly/oauth2_proxy/releases/download/$VERSION/oauth2_proxy-$VERSION.linux-amd64.go1.4.2.tar.gz /tmp/oauth2_proxy.tgz
+ADD https://github.com/bitly/oauth2_proxy/releases/download/$VERSION/oauth2_proxy-2.0.1.linux-amd64.go1.4.2.tar.gz /tmp/oauth2_proxy.tgz
 
 WORKDIR /tmp
 
