--- a/oauth2_proxy/Dockerfile
+++ b/oauth2_proxy/Dockerfile
@@ -3,8 +3,8 @@ Maintainer Bryan Pearson <bwp.pearson@gmail.com>
 
 ENV VERSION 2.0.1
 
-ADD https://github.com/bitly/oauth2_proxy/releases/download/2.0.1/oauth2_proxy-2.0.1.linux-amd64.go1.4.2.tar.gz /tmp/oauth2_proxy.tgz
-
+#ADD https://github.com/bitly/oauth2_proxy/releases/download/2.0.1/oauth2_proxy-2.0.1.linux-amd64.go1.4.2.tar.gz /tmp/oauth2_proxy.tgz
+ADD https://github.com/bitly/oauth2_proxy/releases/download/v$VERSION/oauth2_proxy-$VERSION.linux-amd64.go1.4.2.tar.gz /tmp/oauth2_proxy.tgz
 WORKDIR /tmp
 
 RUN tar zxf oauth2_proxy.tgz \
